@@ -21,27 +21,28 @@
 
 #include "drgeo-filter-chooser.h"
 
-#include "../objects/object_holder.h"
-#include "../objects/object_drawer.h"
-#include "../objects/object_calcer.h"
-#include "../objects/object_factory.h"
-#include "../objects/other_imp.h"
-#include "../objects/line_imp.h"
-#include "../objects/bogus_imp.h"
-#include "../objects/point_type.h"
-#include "../objects/other_type.h"
-#include "../objects/conic_types.h"
-#include "../objects/transform_types.h"
-#include "../objects/line_type.h"
-#include "../objects/curve_imp.h"
-#include "../objects/conic_imp.h"
-#include "../objects/circle_imp.h"
-#include "../objects/circle_type.h"
-#include "../objects/object_type.h"
-#include "../objects/intersection_types.h"
+#include "../kig/kig_part.h"
 #include "../misc/coordinate.h"
 #include "../misc/coordinate_system.h"
-#include "../kig/kig_part.h"
+#include "../objects/bogus_imp.h"
+#include "../objects/circle_imp.h"
+#include "../objects/circle_type.h"
+#include "../objects/conic_imp.h"
+#include "../objects/conic_types.h"
+#include "../objects/curve_imp.h"
+#include "../objects/intersection_types.h"
+#include "../objects/line_imp.h"
+#include "../objects/line_type.h"
+#include "../objects/object_calcer.h"
+#include "../objects/object_drawer.h"
+#include "../objects/object_factory.h"
+#include "../objects/object_holder.h"
+#include "../objects/object_type.h"
+#include "../objects/other_imp.h"
+#include "../objects/other_type.h"
+#include "../objects/point_type.h"
+#include "../objects/transform_types.h"
+#include "../objects/vector_type.h"
 
 #include <qfile.h>
 #include <qnamespace.h>
