@@ -21,20 +21,21 @@
 #include "kseg-defs.h"
 
 #include "../kig/kig_part.h"
+#include "../misc/coordinate.h"
 #include "../objects/bogus_imp.h"
-#include "../objects/line_imp.h"
-#include "../objects/conic_imp.h"
-#include "../objects/point_imp.h"
-#include "../objects/object_factory.h"
-#include "../objects/object_drawer.h"
-#include "../objects/line_type.h"
 #include "../objects/circle_type.h"
+#include "../objects/conic_imp.h"
 #include "../objects/conic_types.h"
+#include "../objects/intersection_types.h"
+#include "../objects/line_imp.h"
+#include "../objects/line_type.h"
+#include "../objects/object_drawer.h"
+#include "../objects/object_factory.h"
 #include "../objects/other_type.h"
+#include "../objects/point_imp.h"
 #include "../objects/point_type.h"
 #include "../objects/transform_types.h"
-#include "../objects/intersection_types.h"
-#include "../misc/coordinate.h"
+#include "../objects/vector_type.h"
 
 #include <qfont.h>
 #include <qpen.h>
