@@ -1,3 +1,12 @@
+2004-04-24  Dominique Devriese  <devriese@kde.org>
+
+	* Add a vector sum object.
+
+	* Move VectorType from other_type.* into vector_type.*.
+
+	* Fix a bug where some objects were not preliminarily drawn
+	correctly.
+
 2004-04-23  Dominique Devriese  <devriese@kde.org>
 
 	* Add a segment-midpoint icon from Julien Narboux
